# mlx90640-driver-devicetree-py

./: .gitignore  README.md  app-tests-jetson-nano-report.html  app-tests-rpi4-report.html  mlx90640_dump.py  setup.cfg  setup.py
.github/workflows/: build-test-publish.yml
devicetree/: __init__.py  cli.py  devicetree.py
devicetree/c-code/: Makefile  main.c
devicetree/c-code/inc/: MLX90640_I2C_Driver_devicetree.h  i2c.h
devicetree/c-code/src/: MLX90640_I2C_Driver_devicetree.c
docs/: index.md
tests/app_testing/: test_init.py
