[metadata]
name = mlx90640-driver-devicetree
url = https://github.com/melexis-fir/mlx90640-driver-devicetree-py
project_urls =
    Documentation = https://melexis-fir.github.io/mlx90640-driver-devicetree-py/
    Source Code = https://github.com/melexis-fir/mlx90640-driver-devicetree-py
    Issue Tracker = https://github.com/melexis-fir/mlx90640-driver-devicetree-py/issues
license = Apache License, Version 2.0
author = Karel Vanroye
author_email = kva@melexis.com
maintainer = melexis-fir
description = I2C for MLX90640 using device tree (raspberry pi, jetson nano, beagle bone, ...)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Topic :: Utilities

[options]
packages = mlx90640_devicetree
package_dir = mlx90640_devicetree=devicetree
include_package_data = true
python_requires = >= 3.6

[options.entry_points]
console_scripts =
    mlx90640-devicetree-dump = mlx90640_devicetree.cli:main

[options.package_data]
mlx90640_devicetree = 
    libs/**/*.dll
    libs/**/*.so
